--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
     "react-native-cards": "^1.1.4",
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-ui-kitten": "^3.1.2",
-    "react-native-vector-icons": "^6.4.0"
+    "react-native-vector-icons": "^6.4.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0"
   },
   "private": true,
   "rnpm": {
