--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-linear-gradient": "^2.5.3",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "redux-saga": "^1.0.2"
   },
   "devDependencies": {
     "axios": "^0.18.0",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
+    "lodash.get": "^4.4.2",
     "react-native-cards": "^1.1.4",
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-ui-kitten": "^3.1.2",
