--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
     "lodash.get": "^4.4.2",
+    "lodash.isempty": "^4.4.0",
     "react-native-cards": "^1.1.4",
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-ui-kitten": "^3.1.2",
