--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jest-expo": "^32.0.0",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
-    "react-native-calendars": "^1.22.0",
+    "moment": "^2.24.0",
+    "react-native-calendars": "1.21.0",
     "react-native-cards": "^1.1.4",
     "react-native-fullwidth-image": "^0.1.3",
+    "react-native-progress-steps": "^1.2.7",
     "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.4.0",
     "react-redux": "^6.0.1",
