--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-calendars": "1.21.0",
     "react-native-cards": "^1.1.4",
     "react-native-fullwidth-image": "^0.1.3",
+    "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress-steps": "^1.2.7",
     "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.4.0",
