[MS-004] - formatted & rooms navigation ready

--- a/ios/AwesomeApp/Info.plist
+++ b/ios/AwesomeApp/Info.plist
@@ -75,6 +75,7 @@
 		<string>simplifica.ttf</string>
 		<string>Raleway-Light.ttf</string>
 		<string>Raleway-Regular.ttf</string>
+		<string>Raleway-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
