--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-calendars": "1.21.0",
     "react-native-cards": "^1.1.4",
+    "react-native-chart-kit": "^2.6.1",
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress-steps": "^1.2.7",
