--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "chart.js": "^2.8.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-chartkick": "^0.3.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-linear-gradient": "^2.5.3",
@@ -38,12 +40,14 @@
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress-steps": "^1.2.7",
+    "react-native-responsive-linechart": "^1.5.1",
     "react-native-svg-charts": "^5.2.0",
     "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.4.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-axios-middleware": "^4.0.0"
+    "redux-axios-middleware": "^4.0.0",
+    "victory-native": "^32.0.2"
   },
   "private": true,
   "rnpm": {
