--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.24.0",
+    "papaparse": "^4.6.3",
     "prettier": "^1.17.0",
     "react-native-animatable": "^1.3.2",
     "react-native-calendars": "1.21.0",
