--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "react-native-elements": "^1.1.0",
     "react-native-linear-gradient": "^2.5.3",
     "react-navigation": "^3.0.9",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "remote-redux-devtools": "^0.5.16"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "moment": "^2.24.0",
     "prettier": "^1.17.0",
     "react-native-calendars": "1.21.0",
@@ -35,6 +37,7 @@
     "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.4.0",
     "react-redux": "^6.0.1",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
     "victory-native": "^32.0.2"
   },
