[MS-007] -  light button changes on light change both manual and from the app

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0",
+    "lodash.find": "^4.6.0",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.remove": "^4.7.0",
     "moment": "^2.24.0",
     "prettier": "^1.17.0",
     "react-native-calendars": "1.21.0",
+    "react-native-event-source": "^1.0.5",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-progress-steps": "^1.2.7",
     "react-native-ui-kitten": "^3.1.2",
