--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-calendars": "1.21.0",
     "react-native-event-source": "^1.0.5",
     "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-picker": "^4.3.7",
     "react-native-progress-steps": "^1.2.7",
     "react-native-ui-kitten": "^3.1.2",
     "react-native-vector-icons": "^6.4.0",
