--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.mapkeys": "^4.6.0",
     "lodash.remove": "^4.7.0",
     "moment": "^2.24.0",
     "prettier": "^1.17.0",
