--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+
+.expo
+.buckconfig
+.flowconfig
+.gitattributes
+.watchmanconfig
+report.20190607.211510.4076.0.001.json
